config/k8s/apps/api-gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ckw-http-route
spec:
  parentRefs:
    - name: ckw-gateway
      namespace: infra
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: api-gateway
          namespace: apps
          port: 8080
